--- a/app/views/pages/my_profile.html.erb
+++ b/app/views/pages/my_profile.html.erb
@@ -2,4 +2,5 @@
 <%= current_user.last_name %><br>
 <%= current_user.email %><br>
 <%= current_user.role %><br>
+<%= @line.find(current_user.line_id) %>
 <%= link_to "Home", root_path %>
