User can now be added to line

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,10 @@
 
   <body>
     <%= yield %>
+  
   </body>
+    <footer>
+      <p>UI designed entirely by Nick Lyons</p>
+      <p>Application Developed by Matthew Johnson</p>
+    </footer>
 </html>
