--- a/app/views/pages/my_profile.html.erb
+++ b/app/views/pages/my_profile.html.erb
@@ -1,5 +1,10 @@
 <%= current_user.first_name %><br>
 <%= current_user.last_name %><br>
 <%= current_user.email %><br>
-<%= current_user.role + ' of ' + @line.find(current_user.line_id).line_name %><br>
+
+<% if current_user.line_id.eql? nil %>
+    <p>You do not currently belong to a line. <%= link_to "Join one here", lines_path %></p>
+<% else %>
+    <p><%= current_user.role + ' of ' + @line.find(current_user.line_id).line_name %></p>
+<% end %>
 <%= link_to "Home", root_path %>
