--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,5 +18,10 @@
 <h1>Release Notes.com!</h1>
 <p>Where the joy of releases and notes come together!</p>
 </center>
-
-<%= link_to "Lines", lines_path %>
+<% if user_signed_in? %>
+    <%= link_to "Lines", lines_path %>
+<% else %>
+    <p>Please sign up, sign in, or get out!</p>
+    <%= link_to "Sign Up", new_user_registration_path %>
+    <%= link_to "Log In", new_user_session_path %>
+<% end %>
