--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,11 @@
 <p>Where the joy of releases and notes come together!</p>
 </center>
 <% if user_signed_in? %>
-    <%= link_to "Lines", lines_path %>
+    <h2>Next Drop: <strong><%= @next_drop.month.to_s + '/' + @next_drop.day.to_s %></strong></h2>
+    <%= link_to "Lines", lines_path %><br>
+    <%= link_to "Defects", defects_path %><br>
+    <%= link_to "Iterations", iterations_path %><br>
+    <%= link_to "Interactions", interactions_path %><br>
 <% else %>
     <p>Please sign up, sign in, or get out!</p>
     <%= link_to "Sign Up", new_user_registration_path %>
