Updated Styles and added modals

--- a/app/views/interactions/index.html.erb
+++ b/app/views/interactions/index.html.erb
@@ -1,1 +1,3 @@
-<h1>Awaiting Development</h1>
+<h1>Interaction Board</h1>
+<%= link_to "Add New Interaction", new_interaction_path %>
+<%= link_to "Home", root_path %> 
