--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,11 +9,9 @@
   </head>
 
   <body>
+    <div id="modal-holder"></div>
+    
     <%= yield %>
   
   </body>
-    <footer>
-      <p>UI designed entirely by Nick Lyons</p>
-      <p>Application Developed by Matthew Johnson</p>
-    </footer>
 </html>
