--- a/app/views/lines/index.html.erb
+++ b/app/views/lines/index.html.erb
@@ -1,31 +1,82 @@
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+
 <h1>PLT Lines</h1>
 
 <% if flash[:notice] %>
     <div class="notice"><%= flash[:notice] %></div>
 <% end %>
-      
+
 <% if current_user.role === 'Scrum Master' %>
-    <%= link_to "Add New Line", new_line_path %><br>
+    <%= button_to "Add New Line", '#' , :method => :get, class: "btn btn-primary", data: { toggle: "modal", target: "#newModal" } %><br>
 <% else %>
     <p>If you need a line added, please contact your scrum master</p>
 <% end %>
 
-<div>
-<% @line.each do |line| %>
-    Line Name: <%= line.line_name %>|
-    Line Work: <%= line.line_work %>|
-    <% if current_user.role === 'Scrum Master' %>
-        <%= link_to "Edit", edit_line_path(line.id) %>|
-        <%= link_to "Delete this Line", line_path(line), method: :delete, data: {confirm: 'Are you sure you want to delete this line?'} %>
-    <% end %>
-    <% if current_user.line_id.eql? nil %>
-        <%= link_to "Join this line", add_to_line_path(line.id) %>
-    <% end %>
-    <% if current_user.line_id === line.id %>
-        <%= link_to "Leave this line", leave_line_path(line.id) %>
-    <% end %>
-    <br><br>
-<% end %>
+<table class="table">
+          <thead>
+            <tr>
+              <th>Line</th>
+              <th>Work</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @line.each do |line| %>
+             <tr class="<%= 'success' if current_user.line_id === line.id%>">
+              <td><%= best_in_place line, :line_name, :as => :input %></td>
+              <td><%= best_in_place line, :line_work %></td>
+                  <% if current_user.role === 'Scrum Master' %>
+                      <td><%= button_to "Edit Line", edit_line_path(line) , :method => :get, class: "btn btn-primary" %></td>
+                      <td><%= button_to "Delete Line", line_path(line), :method => :delete, class: "btn btn-danger", data: {confirm: 'Are you sure you want to delete this line?'} %></td>
+                  <% end %>
+                  <% if current_user.line_id.eql? nil %>
+                      <td><%= button_to "Join Line", add_to_line_path(line.id), :method => :get, class: "btn btn-primary" %></td>
+                  <% end %>
+                  <% if current_user.line_id === line.id %>
+                      <td><%= button_to "Leave Line", leave_line_path(line.id), :method => :get, class: "btn btn-danger" %></td>
+                  <% end %>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+        
+        
+        
+        <%= button_to "Home", root_path, :method => :get, class: "btn btn-primary" %>
+         <div class="modal fade" id="newModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Add New Line</h4>
+      </div>
+      <div class="modal-body">
+        <div class="col-md-12">
+            <%= form_for @line_new do |f| %>
+              <div class="field">
+                <%= f.label :line_name %><br/>
+                <%= f.text_field :line_name, autofocus: true %>
+              </div>
+  
+              <div class="field">
+                <%= f.label :line_work %><br/>
+                <%= f.text_field :line_work, autofocus: true %>
+              </div>
+  
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+         <%= f.submit "Add Line",  class: "btn btn-primary" %>
+        <% end %>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+ 
+
+
 </div>
-<br>
-<%= link_to "Home", root_path %>
+	</div>
+</div>
