--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,55 @@
 <% if user_signed_in? %>
-    <%= link_to "My Profile", my_profile_path %>
-    <%= link_to "Report an Issue", issues_path %>
-    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-    <% if current_user.line_id.eql? nil %>
-       <p>Signed in as <strong><%= current_user.first_name + ' ' + current_user.last_name %></strong></p>
-       <p>Be sure to join a line so you can see your team's updates</p>
-    <% else %>
-        <p>Signed in as <strong><%= current_user.first_name + ' ' + current_user.last_name %></strong></p>
-        <p><%= current_user.role + ' of ' + @line.find(current_user.line_id).line_name %></p>
-    <% end %>
-<% else %> 
-    <%= link_to "Sign Up", new_user_registration_path %>
-    <%= link_to "Log In", new_user_session_path %>
-<% end %> 
-    
-<center>
-<h1>Release Notes.com!</h1>
-<p>Where the joy of releases and notes come together!</p>
-</center>
-<% if user_signed_in? %>
-    <h2>Next Drop: <strong><%= @next_drop.month.to_s + '/' + @next_drop.day.to_s %></strong></h2>
-    <%= link_to "Lines", lines_path %><br>
-    <%= link_to "Defects", defects_path %><br>
-    <%= link_to "Iterations", iterations_path %><br>
-    <%= link_to "Interactions", interactions_path %><br>
-<% else %>
-    <p>Please sign up, sign in, or get out!</p>
-    <%= link_to "Sign Up", new_user_registration_path %>
-    <%= link_to "Log In", new_user_session_path %>
-<% end %>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<ul class="nav nav-tabs">
+				<li>
+					<%= link_to "Lines", lines_path %>
+				</li>
+				<li>
+					<%= link_to "Defects", defects_path %>
+				</li>
+				<li>
+					<%= link_to "Iterations", iterations_path %>
+				</li>
+				<li>
+					<%= link_to "Interactions", interactions_path %>
+				</li>
+				<li class="dropdown pull-right">
+					 <a href="#" data-toggle="dropdown" class="dropdown-toggle"><%= current_user.first_name + ' ' + current_user.last_name %><strong class="caret"></strong></a>
+					<ul class="dropdown-menu">
+						<li>
+							<%= link_to "My Profile", my_profile_path %>
+						</li>
+						<li>
+							<%= link_to "Report an Issue", issues_path %>
+						</li>
+						<li class="divider">
+						</li>
+						<li>
+						    <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+						</li>
+					</ul>
+				</li>
+			</ul>
+			    <h3 class="text-center">Welcome to Release Notes.com!</h3>
+			<% else %>
+			   <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			<ul class="nav nav-pills">
+				<li class="active">
+					<%= link_to "Log In", new_user_session_path %>
+				</li>
+				<li>
+					<%= link_to "Sign Up", new_user_registration_path %>
+				</li>
+			</ul>
+		</div>
+	</div>
+</div>
+<h3 class="text-center">Welcome to Release Notes.com!</h3>
+<p class="text-center">Please consider creating an account or logging in</p>
+			<% end %>
+
+			
