--- a/app/views/pages/my_profile.html.erb
+++ b/app/views/pages/my_profile.html.erb
@@ -1,10 +1,51 @@
-<%= current_user.first_name %><br>
-<%= current_user.last_name %><br>
-<%= current_user.email %><br>
-
-<% if current_user.line_id.eql? nil %>
-    <p>You do not currently belong to a line. <%= link_to "Join one here", lines_path %></p>
-<% else %>
-    <p><%= current_user.role + ' of ' + @line.find(current_user.line_id).line_name %></p>
-<% end %>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+			 <span class="label label-default">Name</span><%= ' ' + current_user.first_name + ' ' + current_user.last_name%><br>
+			 <span class="label label-default">Email</span><%= ' ' + current_user.email %><br> 
+			 <span class="label label-default">Role</span> <%= ' ' + current_user.role %><br>
+			 <% if current_user.line_id.eql? nil %>
+			     <p>You do not currently belong to a line. <%= link_to "Join one here", '#', data: { toggle: "modal", target: "#myModal" } %></p>
+			 <% else %>
+			     <span class="label label-default">Line</span><%= ' ' + @line.find(current_user.line_id).line_name %>
+			 <% end %>
+		</div>
+	</div>
+</div>
 <%= link_to "Home", root_path %>
+
+
+<!-- Modal -->
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Lines</h4>
+      </div>
+      <div class="modal-body">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Line</th>
+              <th>Work</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+            <% @line.each do |line| %>
+              <td><%= line.line_name %></td>
+              <td><%= line.line_work %></td>
+              <td><%= button_to "Join Line", add_to_line_path(line.id), :method => :get, class: "btn btn-primary"  %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
