--- a/app/views/interactions/index.html.erb
+++ b/app/views/interactions/index.html.erb
@@ -1,3 +1,13 @@
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+
 <h1>Interaction Board</h1>
+
+
 <%= link_to "Add New Interaction", new_interaction_path %>
 <%= link_to "Home", root_path %> 
+
+        	</div>
+	</div>
+</div>
