--- a/app/views/lines/edit.html.erb
+++ b/app/views/lines/edit.html.erb
@@ -1,7 +1,8 @@
+
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-        <h4 class="modal-title">Add New Line</h4>
+        <h4 class="modal-title">Update Line Info</h4>
       </div>
       <div class="modal-body">
         <div class="col-md-12">
@@ -22,3 +23,5 @@
 </div>
 	</div>
 </div>
+
+
