--- a/app/views/iterations/index.html.erb
+++ b/app/views/iterations/index.html.erb
@@ -1,19 +1,69 @@
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
 <h1>Iteration Board</h1>
 
-<%= link_to "Add New Iteration", new_iteration_path %><br>
+<%= link_to "Add New Iteration", '#newIterationsModal', class: "btn btn-primary",  data: { toggle: "modal", target: "#newIterationsModal" }  %>
+    <table class="table">
+            <thead>
+                <tr>
+                    <th>Iteration Number</th>
+                    <th>Drop Number</th>
+                    <th>Date of Drop</th>
+                </tr>
+            </thead>
+        <tbody>
+                <% if @iteration.exists? %>
+                    <% @iteration.each do |iteration| %>
+                    <tr>
+                        <td><%= iteration.iteration_number %></td>
+                        <td><%= iteration.drop_number %></td>
+                        <td><%= iteration.date_of_drop.month.to_s + '/' + iteration.date_of_drop.day.to_s + '/' + iteration.date_of_drop.year.to_s %></td>
+                        <td><%= link_to "Add Defect to Iteration", new_defect_path(:iteration_id => params[:id]), class: "btn btn-primary" %></td>
+                    <% end %>
+                <% end %>
+            </tr>
+        </tbody>
+    </table>
 
-<% @iteration.each do |i| %>
-    Iteration <%= i.iteration_number %>
-    Drop <%= i.drop_number %>
-    Date of Drop <%= i.date_of_drop.month.to_s + '/' + i.date_of_drop.day.to_s %>
-    <%= link_to "Edit", edit_iteration_path(i.id) %>
-    <%= link_to "View Report", iteration_path(i.id) %>
-    <% if i.date_of_drop <= @next_drop %>
-        <br>
-    <% else %>
-        <%= link_to "Delete this Iteration", iteration_path(i), method: :delete, data: {confirm: "Are you sure you want to delete this iteration?" } %>
-    <% end %>
-    <br>
-<% end %>
+
 
 <%= link_to "Home", root_path %>
+        <div class="modal fade" id="newIterationsModal">
+            <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Add New Iteration</h4>
+      </div>
+      <div class="modal-body">
+        <div class="col-md-12">
+             <%= form_for @new_iteration do |f| %>
+    <div>
+        <%= f.label :iteration_number %>
+        <%= f.text_field :iteration_number, autofocus: true %>
+    </div>
+    <div>
+        <%= f.label "Drop Number   " %>
+        <%= f.text_field :drop_number, autofocus: true %>
+    </div>
+     <div>
+        <%= f.label "Date of Drop    " %>
+        <%= f.date_select :date_of_drop, autofocus: true %>
+    </div>
+    <%= f.submit "Add New Iteration", class: "btn btn-primary" %>
+<% end %>
+  
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+        </div>
+        
+        
+        	</div>
+	</div>
+</div>
