--- a/app/views/iterations/new.html.erb
+++ b/app/views/iterations/new.html.erb
@@ -1,3 +1,6 @@
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-6">
 <h1>Add new iteration</h1>
 
 <%= form_for @iteration do |f| %>
@@ -6,12 +9,15 @@
         <%= f.text_field :iteration_number, autofocus: true %>
     </div>
     <div>
-        <%= f.label :drop_number %>
+        <%= f.label "Drop Number   " %>
         <%= f.text_field :drop_number, autofocus: true %>
     </div>
      <div>
-        <%= f.label :date_of_drop %>
+        <%= f.label "Date of Drop    " %>
         <%= f.date_select :date_of_drop, autofocus: true %>
     </div>
-    <%= f.submit "Add New Iteration" %>
+    <%= f.submit "Add New Iteration", class: "btn btn-primary" %>
 <% end %>
+        </div>
+    </div>
+</div>
