--- a/app/views/interactions/edit.html.erb
+++ b/app/views/interactions/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Add New Interaction</h1>
+<h1>Edit Interaction</h1>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-4">
@@ -83,7 +83,7 @@
     <%= f.label :workarounds %><br>
     <%= f.text_area :workarounds, cols: "150", rows: "5"  %><br>
     
-    <%= f.submit "Add Interaction", class: 'btn btn-primary' %>
+    <%= f.submit "Edit Interaction", class: 'btn btn-primary' %>
 <% end %>
 <%= link_to "Back", interactions_path %>
 <%= link_to "Home", root_path %>
