--- a/app/views/iterations/view_report.html.erb
+++ b/app/views/iterations/view_report.html.erb
@@ -1,52 +1,151 @@
-<% if Iteration.all.empty? %> 
-<p>No iterations exist</p>
-<% else %>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
-		  <h1><%= "Release notes for Iteration #{@iteration.iteration_number}, Drop #{@iteration.drop_number}"%></h1>
-		  <% @interaction.order(:line_id) %>
-		  	<div class="table-responsive">
-		  		<table class="table">
-		  			<thead>
-		  				<% @interaction.each do |interaction| %>
-		  				<% line = @line.find(interaction.line_id) %>
-		  				<% scrum_master = @user.where(:line_id => interaction.line_id, :role => 'Scrum Master').first.first_name + ' ' + @user.where(:line_id => interaction.line_id, :role => 'Scrum Master').first.last_name %>
-		  				<tr>
-		  					<th><%= line.line_name + '---' +  line.line_work + '---' + "Scrum Master: #{scrum_master}" %></th>
-		  				</tr>
-		  				<% end %>
-		  			</thead>
+		  <h1><%= "Release notes for Iteration #{@iteration.iteration_number}, Drop #{@iteration.drop_number}" %></h1>
+
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span8 well">
+            <ul class="nav nav-tabs">
+                <li class="active"> <a href="#interactions" data-target="#interactions" data-toggle="tab">Interaction Report</a>
+					
+                </li>
+                <li><a href="#defects" data-target="#defects" data-toggle="tab">Defect Report</a>
+
+                </li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane active fade in" id="interactions">
+                		<div class="table-responsive">
+		  		<table class="table table-striped table-hover">
+		  		    <% @line.each do |line| %>
+		  		    <thead>
+		  		        <tr class="active">
+		  		        	<th colspan="2"><%= line.line_name %></th>
+		  		       		<th colspan="2"><%= line.line_work %></th>
+		  		        	<th colspan="7">Scrum Master: <%= @user.where(:line_id => line.id, :role => 'Scrum Master').first.first_name + ' ' + @user.where(:line_id => line.id, :role => 'Scrum Master').first.last_name unless  @user.where(:line_id => line.id, :role => 'Scrum Master').first === nil %></th>
+		  		        </tr>
+		  		    </thead>
+		  		    <thead>
+		  		        <tr>
+		  		            <th>Interaction Name</th>
+		  		            <th>Interface</th>
+		  		            <th>Notes from Release</th>
+		  		            <th>RRC Version</th>
+		  		            <th>Data Mapping?</th>
+		  		            <th>PLT Crossline Dependency?</th>
+		  		            <th>PC Changes?</th>
+		  		            <th>Plug-in Changes?</th>
+		  		            <th>IA Changes?</th>
+		  		            <th>DB Script Changes?</th>
+		  		            <th>External Changes?</th>
+		  		        </tr>
+		  		    </thead>
+		  		       <tbody>
+		  		           <% @interaction.each do |interaction| %>
+		  		               <% if interaction.line_id === line.id %>
+		  		           <tr>
+		  		              <td><%= interaction.interaction_name  %></td>
+		  		              <td><%= interaction.interface %></td>
+		  		              <td><%= interaction.notes_from_release %></td>
+		  		              <td><%= interaction.rrc_version %></td>
+		  		              <td><%= interaction.data_mapping ? 'yes' : 'no' %></td>
+		  		              <td><%= interaction.plt_crossline_dep ? 'yes' : 'no' %></td>
+		  		              <td><%= interaction.pc_changes ? 'yes' : 'no' %></td>
+		  		              <td><%= interaction.plugin_changes ? 'yes' : 'no' %></td>
+		  		              <td><%= interaction.ia_changes ? 'yes' : 'no' %></td>
+		  		              <td><%= interaction.db_script ? 'yes' : 'no' %></td>
+		  		              <td><%= interaction.external_changes ? 'yes' : 'no' %></td>
+		  		              <% if current_user.id === interaction.owner_id %>
+		  		                  <td><%= link_to "Edit This Interaction", edit_interaction_path(interaction), class: "btn btn-primary" %></td>
+		  		                  <td><%= link_to "Delete This Interaction", interaction_path(interaction), :method => :delete, class: "btn btn-danger" %></td>
+		  		               <% end %>
+		  		           </tr> 
+		  		           <tr>
+		  		           		<th colspan="2">PLT Crossline Dependencies Details</th>
+		  		           		<th colspan="2">PC Changes Details</th>
+		  		           		<th colspan="2">Plug-in Changes Details</th>
+		  		           		<th colspan="1">IA Changes Details</th>
+		  		           		<th>DB Script Changes Details</th>
+		  		           		<th>External Changes Details</th>
+		  		           		<th>Known Issues</th>
+		  		           		<th>Workarounds</th>
+		  		           </tr>
+		  		           <tr>
+		  		           		<td colspan="2"><%= interaction.plt_dep_dets %></td>
+		  		           		<td colspan="2"><%= interaction.pc_changes_type %></td>
+		  		           		<td colspan="2"><%= interaction.plug_changes_type %></td>
+		  		           		<td colspan="1"><%= interaction.ia_changes_type %></td>
+		  		           		<td><%= interaction.db_script_type %></td>
+		  		           		<td><%= interaction.external_changes_type %></td>
+		  		           		<td><%= interaction.issues_defects %></td>
+		  		           		<td><%= interaction.workarounds %></td>
+		  		           </tr>
+		  		             <% end %>
+		  		       </tbody>
+		  		       <% end %>
+		  		        <% end %>
 		  		</table>
+			</div>
+                </div>
+                <div class="tab-pane" id="defects">
+                <div class="table-responsive">
+		  		<table class="table table-striped table-hover">
+		  			<% @line.each do |line| %>
+		  		    <thead>
+		  		        <tr class="active">
+		  		        	<th colspan="2"><%= line.line_name %></th>
+		  		       		<th colspan="2"><%= line.line_work %></th>
+		  		        	<th colspan="7">Scrum Master: <%= @user.where(:line_id => line.id, :role => 'Scrum Master').first.first_name + ' ' + @user.where(:line_id => line.id, :role => 'Scrum Master').first.last_name unless  @user.where(:line_id => line.id, :role => 'Scrum Master').first === nil %></th>
+		  		        </tr>
+		  		    </thead>
+		  		    <thead>
+		  		        <tr>
+		  		            <th>Defect Number</th>
+		  		            <th>RTC Number</th>
+		  		            <th>QC Number</th>
+		  		            <th>Config</th>
+		  		            <th>Data Mapping?</th>
+		  		            <th>PC Changes?</th>
+		  		            <th>Plug-in Changes?</th>
+		  		            <th>IA Changes?</th>
+		  		            <th>DB Script Changes?</th>
+		  		            <th>External Changes?</th>
+		  		            <th>Workarounds</th>
+		  		        </tr>
+		  		    </thead> 
+		  		    <tr>
+		  		    	<% @defect.each do |defect| %>
+		  		    	<% if defect.line_id === line.id %>
+		  		    		<td><%= defect.defect_no %></td>
+		  		    		<td><%= defect.rtc %></td>
+		  		    		<td><%= defect.qc %></td>
+		  		    		<td><%= defect.config %></td>
+		  		    		<td><%= defect.data_mapping_def ? 'yes' : 'no' %></td>
+		  		    		<td><%= defect.pc_changes_def ? 'yes' : 'no' %></td>
+		  		    		<td><%= defect.plugin_changes_def ? 'yes' : 'no' %></td>
+		  		    		<td><%= defect.ia_changes_def ? 'yes' : 'no' %></td>
+		  		    		<td><%= defect.db_changes_def ? 'yes' : 'no' %></td>
+		  		    		<td><%= defect.external_changes_def ? 'yes' : 'no' %></td>
+		  		    		<td><%= defect.workarounds %></td>
+		  		    		<% if current_user.id === defect.owner_id %>
+		  		                  <td><%= link_to "Edit This Defect", edit_defect_path(defect), class: "btn btn-primary" %></td>
+		  		                  <td><%= link_to "Delete This Defect", defect_path(defect), :method => :delete, class: "btn btn-danger" %></td>
+		  		               <% end %>
+		  		    	<% end %>
+		  		    	<% end %>
+		  		    </tr>
+		  			<% end %>
+		  		</table>
+		  		</div>
+		  		</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 			</div>
 		</div>
 	</div>
 </div>
-<% end %>
-<!-- 
-array = [1, 2, 3]
-
-array.each do |array|
-  puts array
-  shishka = [4, 5, 6]
-    shishka.each do |shishka|
-      puts shishka
-    end
-  end 
-
-
-Results:   
-1
-4
-5
-6
-2
-4
-5
-6
-3
-4
-5
-6
-
--->
