--- a/app/views/pages/issues.html.erb
+++ b/app/views/pages/issues.html.erb
@@ -1,2 +1,8 @@
-<h1>Awaiting Development</h1>
-<%= link_to "Return to Homepage", root_path %>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-12">
+            <h1>Submit an issue!</h1>
+            <p>I do try, but <i>sometimes</i> I do get it wrong...</p>
+        </div>
+    </div>
+</div>
