You now cannnot duplicate Scrum Masters

--- a/app/views/iterations/edit.html.erb
+++ b/app/views/iterations/edit.html.erb
@@ -13,5 +13,5 @@
         <%= f.label :date_of_drop %>
         <%= f.date_select :date_of_drop, autofocus: true %>
     </div>
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", class: "btn btn-primary" %>
 <% end %>
