Fixed defect table

--- a/app/views/iterations/view_report.html.erb
+++ b/app/views/iterations/view_report.html.erb
@@ -96,6 +96,7 @@
 		  		            <th>DB Script Changes?</th>
 		  		            <th>External Changes?</th>
 		  		            <th>Workarounds</th>
+		  		            <th>Added By</th>
 		  		        </tr>
 		  		    </thead> 
 		  		    <tbody>
