Cloning features added

--- a/app/views/iterations/view_report.html.erb
+++ b/app/views/iterations/view_report.html.erb
@@ -62,7 +62,7 @@
 		  		                  <td><%= link_to "Edit", edit_interaction_path(interaction), class: "btn btn-primary" %></td>
 		  		                  <td><%= link_to "Delete", interaction_path(interaction), :method => :delete, class: "btn btn-danger" %></td>
 		  		               <% end %>
-		  		             <td><%= link_to "Clone to another iteration", '#cloneModal', class: "btn btn-primary",  data: { toggle: "modal", target: "#cloneModal" }  %></td>
+		  		            <td><%= link_to "Clone to another iteration", clone_interaction_iteration_path(interaction), class: "btn btn-primary" %></td>
 		  		           </tr> 
 		  		       
 		  		           </div>
